# CDCraft

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: docker-compose.yml  makefile
example/connectors/: sink.json  source.json
example/connectors/tmp/: sink-solo.json  source-bloat.json  source-slim.json
example/v2/: Dockerfile
example_pipeline/: main.py  mental_model.py  pg_replication_pipeline.py  readme.md  requirements.txt
example_pipeline/.dlt/: .sources  config.toml
src/: batch_generator.py  cli.py  column_manager.py  column_pool.py  main.py  mutation_engine.py  prompt_utils.py  runner.py  schema_manager.py
